# osRemoteManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  utility.cmake
DevDoc/: osRemoteManager_UML.drawio
Server/: CMakeLists.txt
Server/src/: main.cpp
Server/src/Models/: AppConfig.cpp  AppConfig.h  Device.cpp  Device.h
Server/src/Services/: DeviceManager.cpp  DeviceManager.h  DeviceRepository.cpp  DeviceRepository.h  DeviceRepositoryInterface.h
Server/tests/: main_test.cpp
Server/tests/Models/: DeviceTests.h
